recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:4: error: not found: value level
	if(level>1){
           ^PolygonFractal:9: error: not found: value level
	if(level>1){
           ^PolygonFractal:14: error: not found: value level
	if(level>1){
           ^PolygonFractal:19: error: not found: value level
	if(level>1){
           ^PolygonFractal:24: error: not found: value level
	if(level>1){
           ^